# open-embeddings

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.py
examples/: client_example.py
open_embeddings/: __init__.py  app.py  config.py  embeddings.py  main.py  models.py
tests/: __init__.py  test_api.py  test_embeddings.py
